test/log/store/vstcb4in0_v_i64_m.txt
vstcb4in0_v_i64_m.c:16:2: warning: multi-line comment [-Wcomment]
   16 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vstcb4in0_v_i64_m.c:18:44: warning: backslash and newline separated by space
   18 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vstcb4in0_v_i64_m.c:37:93: error: expected declaration specifiers or '...' before ')' token
   37 | void vstcb4in0_v_i64_m_golden(uint64_t *mask,int64_t *base,int64_t value[4][8],uint32_t imm,) {
      |                                                                                             ^
vstcb4in0_v_i64_m.c: In function 'main':
vstcb4in0_v_i64_m.c:54:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   54 |     data_init_bool(mask, exp_mask, 8, 0xffffffffffffffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vstcb4in0_v_i64_m.c:66:5: warning: implicit declaration of function 'vstcb4in0_v_i64_m_golden'; did you mean 'vstcb4in0_v_i64_m'? [-Wimplicit-function-declaration]
   66 |     vstcb4in0_v_i64_m_golden(exp_mask,exp_base,exp_value,exp_imm,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
      |     vstcb4in0_v_i64_m
vstcb4in0_v_i64_m.c:66:66: error: 'exp_result' undeclared (first use in this function)
   66 |     vstcb4in0_v_i64_m_golden(exp_mask,exp_base,exp_value,exp_imm,exp_result);
      |                                                                  ^~~~~~~~~~
vstcb4in0_v_i64_m.c:66:66: note: each undeclared identifier is reported only once for each function it appears in
vstcb4in0_v_i64_m.c:72:9: error: 'i' undeclared (first use in this function)
   72 |     for(i=0;i<ELE_NUM*COMBO_NUM;i++) {
      |         ^
vstcb4in0_v_i64_m.c:47:14: warning: variable 'imm' set but not used [-Wunused-but-set-variable]
   47 |     uint32_t imm;
      |              ^~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vstcb4in0_v_i64_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vstcb4in0_v_i64_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vstcb4in0_v_i64_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vstcb4in0_v_i64_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed